# Aircontrol-server

./: .gitignore  CMakeLists.txt  README  class.h  data_object.cpp  data_object.h  data_struct.h  database.h  db_controller.cpp  db_controller.h  db_controller.hpp  fields_count.hpp  flight_path  flight_path.cpp  flight_path.h  getter.hpp  magic_in.hpp  magic_out.hpp  main.cpp  main_tests.cpp  query.h  socket.cpp  socket.h  socket.hpp  support.cpp  support.h  tests.cpp  tests.h
resources/: air-planner.sqlite
